--- a/statistika projekt.tex
+++ b/statistika projekt.tex
@@ -372,7 +372,7 @@ $$
 $$
 Upoštevamo simetričnost, program $python$ pa nam problem reducira na: 
 $$
-P(Z \leq 0.9689) = 1 - \frac{\alpha_p}{2},~\text{s pomočjo \cite{student} pa dobimo še oceno $\alpha_p = 0.0622$.}
+P(Z \leq 1.86983715) = 1 - \frac{\alpha_p}{2},~\text{s pomočjo \cite{student} pa dobimo še oceno $\alpha_p = 0.0622$.}
 $$
 Opomnimo, da bi si statistično značilnost lahko ogledali tudi prek p-vrednosti. Če je p-vrednost manjša od standardne stopnje tveganja, potem imamo statistično značilnost, če pa je p-vrednost večja, statistične značilnosti nimamo. 
 Hitro opazimo, da je v tem primeru seveda p-vrednost večja od standardne stopnje tveganja, zato še dodatno potrdimo, da nimamo statistične značilnosti linearnega trenda spreminjanja temperature s časom.
